   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.51
 ============

 Released on 

 New features and improvements:

   - 

 Bug fixes:

   - 

 Other changes:

   - ofaIEntryOpeTemplate: new interface.
   - ofa_idbconnect_has_table(): new method.
   - Many UI sources are moved to core/.

-----------------------------------------------------------------------
 Version 0.50
 ============

 Released on 2016-03-13

 New features and improvements:

   - Have a new icon for account selection (todo #1034).
   - DBModel v28: increase all identifiers and labels size (todo #969). 
   - ofaReconciliation: asssociates an account to the used BAT files (todo #751).
   - ofaReconciliation: manage BAT vs. Account selection (todo #752).
   - ofaReconciliationRender: prints unconciliated bank transactions (todo #985).
   - ofaReconciliationRender: change the bottom summary font (todo #1001).
   - ofaReconciliationRender: add the rendering date to the title (todo #1002).
   - ofaReconciliationRender: compare bank and account soldes (todo #1004).

 Bug fixes:

   - import-bourso-pdf: fix PDF import (todo #1006).
   - ofaDossierTreeview: just ignore rows with empty columns (todo #1035).
   - ofoDossier: fix update of solde account per currency.

 Other changes:

   - Fails when dispose_has_run is True (todo #995).
   - myIDialog: new interface.
   - myDialog, myWindow: removed classes (todo #992).
   - my_iwindow_msg_dialog(): new method (todo #1039).
   - ofaIEntryAccount: new interface.
   - ofa_irenderable_set_summmary_font(): new method.
   - ofaISingleKeeper: new interface (todo #1038).
   - ofaOpeTemplateBookBin: removed class (todo #1037).
   - ofaSettlement: is renamed as ofaSettlementPage (todo #1040).